# nomad-backup

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: BuildImage.yml
nomad_backup/: __init__.py  __main__.py  backup.py  config.py  hook.py  nomad.py
